--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,11 +30,11 @@
   </filter>
   <filter>
     <filter-name>CharacterEncoding</filter-name>
-    <filter-class>mx.gob.stcm.credencial.filters.CharacterEncoding</filter-class>
+    <filter-class>mx.ipn.escom.socialwriters.filtros.CharacterEncoding</filter-class>
   </filter>
   <filter>
   	<filter-name>LogInActivo</filter-name>
-  	<filter-class>mx.gob.stcm.credencial.filters.LogInActivo</filter-class>
+  	<filter-class>mx.ipn.escom.socialwriters.filtros.LogInActivo</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>openSessionInViewFilter</filter-name>
@@ -51,25 +51,25 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <!-- Servlets -->
-  <servlet>
-    <display-name>LogIn</display-name>
-    <servlet-name>LogIn</servlet-name>
-    <servlet-class>mx.gob.stcm.credencial.accesoDB.Log.LogIn</servlet-class>
-  </servlet>
-<!--  <servlet>
-    <display-name>LogOut</display-name>
-    <servlet-name>LogOut</servlet-name>
-    <servlet-class>mx.gob.stcm.credencial.accesoDB.Log.LogOut</servlet-class>
-  </servlet>-->
-  <servlet-mapping>
-  	<servlet-name>LogIn</servlet-name>
-  	<url-pattern>/LogIn</url-pattern>
-  </servlet-mapping>
-<!--  <servlet-mapping>
-  	<servlet-name>LogOut</servlet-name>
-  	<url-pattern>/LogOut</url-pattern>
-  	<url-pattern>/App/LogOut</url-pattern>
-  </servlet-mapping>-->
+<!--   <servlet> -->
+<!--     <display-name>LogIn</display-name> -->
+<!--     <servlet-name>LogIn</servlet-name> -->
+<!--     <servlet-class>mx.gob.stcm.credencial.accesoDB.Log.LogIn</servlet-class> -->
+<!--   </servlet> -->
+<!--  <servlet> -->
+<!--     <display-name>LogOut</display-name> -->
+<!--     <servlet-name>LogOut</servlet-name> -->
+<!--     <servlet-class>mx.gob.stcm.credencial.accesoDB.Log.LogOut</servlet-class> -->
+<!--   </servlet> -->
+<!--   <servlet-mapping> -->
+<!--   	<servlet-name>LogIn</servlet-name> -->
+<!--   	<url-pattern>/LogIn</url-pattern> -->
+<!--   </servlet-mapping> -->
+<!--  <servlet-mapping> -->
+<!--   	<servlet-name>LogOut</servlet-name> -->
+<!--   	<url-pattern>/LogOut</url-pattern> -->
+<!--   	<url-pattern>/LogOut</url-pattern> -->
+<!--   </servlet-mapping> -->
   <session-config>
     <session-timeout>180</session-timeout>
   </session-config>
