--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+		    <groupId>com.sun.mail</groupId>
+		    <artifactId>javax.mail</artifactId>
+		    <version>1.6.0</version>
+		</dependency>
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>3.1</version>
