--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,18 +56,27 @@
     <servlet-name>BuscarInformacionFormularios</servlet-name>
     <servlet-class>mx.ipn.escom.socialwriters.accesoDB.utilidades.BuscarInformacionFormularios</servlet-class>
   </servlet>
- <servlet-mapping>
-  	<servlet-name>BuscarInformacionFormularios</servlet-name>
-  	<url-pattern>/BuscarInformacionFormularios</url-pattern>
-  </servlet-mapping>
   <servlet>
     <display-name>RegistrarUsuario</display-name>
     <servlet-name>RegistrarUsuario</servlet-name>
     <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.RegistrarUsuario</servlet-class>
   </servlet>
- <servlet-mapping>
+  <servlet>
+    <display-name>Acciones</display-name>
+    <servlet-name>Acciones</servlet-name>
+    <servlet-class>mx.ipn.escom.socialwriters.accesoDB.utilidades.Acciones</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>BuscarInformacionFormularios</servlet-name>
+  	<url-pattern>/BuscarInformacionFormularios</url-pattern>
+  	</servlet-mapping>
+  <servlet-mapping>
   	<servlet-name>RegistrarUsuario</servlet-name>
   	<url-pattern>/RegistrarUsuario</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>Acciones</servlet-name>
+  	<url-pattern>/Acciones</url-pattern>
   </servlet-mapping>
   <session-config>
     <session-timeout>180</session-timeout>
