--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -71,6 +71,11 @@
     <servlet-name>EditarPerfil</servlet-name>
     <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.EditarPerfil</servlet-class>
   </servlet>
+  <servlet>
+    <display-name>CrearObra</display-name>
+    <servlet-name>CrearObra</servlet-name>
+    <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.CrearObra</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>BuscarInformacionFormularios</servlet-name>
   	<url-pattern>/BuscarInformacionFormularios</url-pattern>
@@ -82,6 +87,10 @@
   <servlet-mapping>
   	<servlet-name>RegistrarUsuario</servlet-name>
   	<url-pattern>/RegistrarUsuario</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>CrearObra</servlet-name>
+  	<url-pattern>/CrearObra</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>EditarPerfil</servlet-name>
