--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>com.liferay</groupId>
+			<artifactId>org.apache.commons.fileupload</artifactId>
+			<type>jar</type>
+			<version>1.2.2.LIFERAY-PATCHED-1</version>
+		</dependency>
         <!-- ********************** -->
         <!-- Dependencias de Spring -->
         <!-- ********************** -->
