--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,12 @@
             <version>3.21.0-GA</version>
             <type>jar</type>
             <scope>compile</scope>
-        </dependency>
+        </dependency>       
+        <dependency>
+	       <groupId>commons-io</groupId>
+	       <artifactId>commons-io</artifactId>
+	       <version>2.5</version>
+        </dependency>        
     </dependencies>
     <build>
         <finalName>LibroSocial</finalName>
