--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,11 @@
     <servlet-name>CrearCapitulo</servlet-name>
     <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.CrearCapitulo</servlet-class>
   </servlet>
+  <servlet>
+    <display-name>EditarObra</display-name>
+    <servlet-name>EditarObra</servlet-name>
+    <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.EditarObra</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>BuscarInformacionFormularios</servlet-name>
   	<url-pattern>/BuscarInformacionFormularios</url-pattern>
@@ -104,6 +109,10 @@
   <servlet-mapping>
   	<servlet-name>EditarPerfil</servlet-name>
   	<url-pattern>/EditarPerfil</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>EditarObra</servlet-name>
+  	<url-pattern>/EditarObra</url-pattern>
   </servlet-mapping>
   <session-config>
     <session-timeout>180</session-timeout>
