--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,11 @@
     <servlet-name>CrearCapitulo</servlet-name>
     <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.CrearCapitulo</servlet-class>
   </servlet>
+  <servlet>
+    <display-name>HacerDenuncia</display-name>
+    <servlet-name>HacerDenuncia</servlet-name>
+    <servlet-class>mx.ipn.escom.socialwriters.accesoDB.control.usuario.HacerDenuncia</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>BuscarInformacionFormularios</servlet-name>
   	<url-pattern>/BuscarInformacionFormularios</url-pattern>
@@ -100,6 +105,10 @@
   <servlet-mapping>
   	<servlet-name>CrearCapitulo</servlet-name>
   	<url-pattern>/CrearCapitulo</url-pattern>
+  </servlet-mapping>
+   <servlet-mapping>
+  	<servlet-name>HacerDenuncia</servlet-name>
+  	<url-pattern>/HacerDenuncia</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>EditarPerfil</servlet-name>
