--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
   	<filter-name>LogInActivo</filter-name>
   	<filter-class>mx.ipn.escom.socialwriters.filtros.LogInActivo</filter-class>
   </filter>
+  <filter>
+  	<filter-name>FiltroIndex</filter-name>
+  	<filter-class>mx.ipn.escom.socialwriters.filtros.FiltroIndex</filter-class>
+  </filter>
   <filter-mapping>
     <filter-name>openSessionInViewFilter</filter-name>
     <url-pattern>/*</url-pattern>
@@ -49,6 +53,10 @@
   <filter-mapping>
     <filter-name>LogInActivo</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>FiltroIndex</filter-name>
+    <url-pattern>/index.jsp</url-pattern>
   </filter-mapping>
   <!-- Servlets -->
   <servlet>
@@ -126,4 +134,7 @@
   <session-config>
     <session-timeout>180</session-timeout>
   </session-config>
+  <welcome-file-list>
+  	<welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 </web-app>
