--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,6 +57,7 @@
   <filter-mapping>
     <filter-name>FiltroIndex</filter-name>
     <url-pattern>/index.jsp</url-pattern>
+    <url-pattern>/</url-pattern>
   </filter-mapping>
   <!-- Servlets -->
   <servlet>
